--- a/src/contents/all/components/knot/KnotInput/KnotInput.scss
+++ b/src/contents/all/components/knot/KnotInput/KnotInput.scss
@@ -15,7 +15,7 @@
   .knotCardFooter {
     position: absolute;
     right: 0;
-    margin-top: 3px;
+    margin-top: 21px;
     transition: all 0.21s ease-in-out;
   }
 }
